--- a/1.04/10_23/html/index.html
+++ b/1.04/10_23/html/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"></head>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@100&display=swap');
+  </style>
 <body>
     <!-- If you feel confident, you can try putting your image in here. -->
   <!-- <img class="profile-image " src="assets/images/1654699612942.jfif" alt="profile picture"> -->
